# kobeOs

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS-IMPROVEMENT-SPEC.md  AGENTS.md  Dockerfile.web  README.md  eslint.config.js  improve-kobeos.sh  index.html  package-lock.json  package.json  plan-cargo-public.md  plan-v20.md  playwright.config.ts  push-kobeos-complete.sh  setup-all.sh  setup-kobeos-installer.sh  setup-storefront.sh  tailwind.config.js  tsconfig.app.json  vite.config.ts
.devcontainer/: devcontainer.json
.githooks/: pre-commit
cloud/: README.md
deploy/: ARCHITECTURE.md  CENTRAL-PROVISIONING.md  CLOUDFLARE-CHECKLIST.md  PAGES.md  PUBLISHING.md  _headers  _redirects  cf-setup.sh  cloudflared-tunnel.service  deploy.sh  go-live.sh  make-stores-live.sh  pages-deploy.sh  wrangler.toml
desktop/: main.js  preload.js
dist2/: index.html
docker/: ruview-kobe-security.compose.yml
docs/: KOBEERP_REFERENCE_IMPLEMENTATION_MAP.md  KOBEERP_SHOP_WAREHOUSE_STOCK_ESTIMATOR.md  architecture.md
drivers/: index.js
electron/: conflict-resolver.js  core-integrity.js  localdb.js  main.cjs  main.js  os-update-service.js  pg-bootstrap.cjs  preload.cjs  preload.js  splash-preload.cjs  update-manager.cjs  update-manager.js  update-verifier.js
kobe-sports-vision/: .gitignore  README.md  config.example.yaml  requirements.txt
public/: manifest.json  sw.js
registry-server/: .env.example  Dockerfile  package-lock.json  package.json
scripts/: build-football-vision.py  build-iso.cjs  build-iso.js  release.cjs  (+28 more)
sdk/rust/: Cargo.toml  README.md
(+1105 files in other folders)
