[package]
name = "kobeos-sdk"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for KobeOS runtime integration"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["async"]
async = ["tokio", "reqwest"]
